--- a/.env.example
+++ b/.env.example
@@ -9,19 +9,20 @@ APP_FALLBACK_LOCALE=en
 APP_LOCALE_PHP=en_US
 APP_TIMEZONE=UTC
 LOG_CHANNEL=daily
+DB_SOCKET=/Applications/MAMP/tmp/mysql/mysql.sock
 DEBUGBAR_ENABLED=true
 SINGLE_LOGIN=false
 licenseName_ckfinder="myblog.test"
 licenseKey_ckfinder="E484F3SRLF1SPM62W58GCGTBEYPH8"
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=blog_laravel
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
